使用正则解析m3u8 内容而非借用io.lindstrom:m3u8-parser 库以获得最大兼容性